--- a/components/meetups/MeetupItem.module.css
+++ b/components/meetups/MeetupItem.module.css
@@ -33,8 +33,8 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  color: #77002e;
-  border: 1px solid #77002e;
+  color: #030303;
+  border: 1px solid #0a0a0a;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
@@ -42,5 +42,5 @@
 
 .actions button:hover,
 .actions button:active {
-  background-color: #ffe2ed;
+  color: #ee8f22;
 }
